cmake_minimum_required(VERSION 3.11.2)
project(Enek)

enable_testing()

message("CMAKE_C_COMPILER=${CMAKE_C_COMPILER}")
message("CMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}")

set(CMAKE_CXX_STANDARD 17)

message("CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")

if (ENEK_ENABLE_COVERAGE)
  add_compile_options("-coverage")
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -coverage")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -coverage")
endif()
message("ENEK_ENABLE_COVERAGE=${ENEK_ENABLE_COVERAGE}")

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
  if (("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang"))
    set(ENEK_ENABLE_ASAN ON CACHE BOOL "Enable AddressSanitizer.")
  endif()
endif()
if (ENEK_ENABLE_ASAN)
  add_compile_options(-fsanitize=address)
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=address")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
endif()
message("ENEK_ENABLE_ASAN=${ENEK_ENABLE_ASAN}")

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
  if (("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang"))
    set(ENEK_ENABLE_UBSAN ON CACHE BOOL "Enable AddressSanitizer.")
  endif()
endif()
if (ENEK_ENABLE_UBSAN)
  add_compile_options(-fsanitize=undefined)
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=undefined")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=undefined")
endif()
message("ENEK_ENABLE_UBSAN=${ENEK_ENABLE_UBSAN}")

if (ENEK_ENABLE_TSAN)
  add_compile_options(-fsanitize=thread)
  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=thread")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
endif()
message("ENEK_ENABLE_TSAN=${ENEK_ENABLE_TSAN}")

if (ENEK_ENABLE_LIBSTDCXX_DEBUG_MODE)
  add_definitions(-D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC)
endif()
message("ENEK_ENABLE_LIBSTDCXX_DEBUG_MODE=${ENEK_ENABLE_LIBSTDCXX_DEBUG_MODE}")

add_definitions("-DENEK_GIT_COMMIT_HASH=\"${ENEK_GIT_COMMIT_HASH}\"")
message("ENEK_GIT_COMMIT_HASH=${ENEK_GIT_COMMIT_HASH}")

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
  set(ENEK_ENABLE_ASSERT ON CACHE BOOL "Enable assertions.")
endif()
if (ENEK_ENABLE_ASSERT)
  add_definitions(-DENEK_ENABLE_ASSERT)
endif()
message("ENEK_ENABLE_ASSERT=${ENEK_ENABLE_ASSERT}")

message("CMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}")
message("CMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}")

add_subdirectory(ext)
add_subdirectory(src)
add_subdirectory(test)
